Fixed inventory Lock. Fixed broken inheritance.

--- a/src/styles/Mixins.sass
+++ b/src/styles/Mixins.sass
@@ -152,9 +152,6 @@
 
     &.button
       cursor: pointer
-      border: 1px solid grey
-      border-radius: 3px
-      background-color: rgba(0, 0, 0, 0.1)
 
   &button
     position: absolute
@@ -164,7 +161,7 @@
     height: 30px
     padding: 0
     object-fit: cover
-    border: 1px solid grey
+    border: 1px solid transparent
     border-radius: 3px
     background-color: rgba(0, 0, 0, 0.1)
     cursor: pointer
